# serenity-chokepoint

./: LICENSE  PUBLISHING.md  README.md  README.zh.md  REPRODUCE.md  pyproject.toml
serenity_chokepoint/: __init__.py  adversarial.py  backtest.py  chokepoint_data.py  cli.py  demand_model.py  growth.py  live_data.py  oos_backtest.py  pool.py  report.py  scanner.py  scoring.py  supply_chain.py  thesis.py
tests/: test_serenity.py
